[gd_scene load_steps=3 format=3 uid="uid://hud"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]
[ext_resource type="Texture2D" uid="uid://energy_icon" path="res://assets/sprites/ui/energy_icon.png" id="2_energy"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hud")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_constants/separation = 15

[node name="EnergyPanel" type="PanelContainer" parent="TopBar"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="TopBar/EnergyPanel"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HBox" type="HBoxContainer" parent="TopBar/EnergyPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="EnergyIcon" type="TextureRect" parent="TopBar/EnergyPanel/VBox/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("2_energy")
expand_mode = 1
stretch_mode = 5

[node name="EnergyLabel" type="Label" parent="TopBar/EnergyPanel/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "100 / 1000"

[node name="EnergyBar" type="ProgressBar" parent="TopBar/EnergyPanel/VBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
max_value = 1000.0
value = 100.0
show_percentage = false

[node name="ExpPanel" type="PanelContainer" parent="TopBar"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="TopBar/ExpPanel"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HBox" type="HBoxContainer" parent="TopBar/ExpPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LevelIcon" type="Label" parent="TopBar/ExpPanel/VBox/HBox"]
layout_mode = 2
text = "‚≠ê"

[node name="LevelLabel" type="Label" parent="TopBar/ExpPanel/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Lv.1"

[node name="ExpBar" type="ProgressBar" parent="TopBar/ExpPanel/VBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
max_value = 100.0
value = 0.0
show_percentage = false

[node name="GoldPanel" type="PanelContainer" parent="TopBar"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="TopBar/GoldPanel"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="GoldIcon" type="Label" parent="TopBar/GoldPanel/HBox"]
layout_mode = 2
text = "ü™ô"

[node name="GoldLabel" type="Label" parent="TopBar/GoldPanel/HBox"]
layout_mode = 2
text = "500"

[node name="DiamondPanel" type="PanelContainer" parent="TopBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="TopBar/DiamondPanel"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="DiamondIcon" type="Label" parent="TopBar/DiamondPanel/HBox"]
layout_mode = 2
text = "üíé"

[node name="DiamondLabel" type="Label" parent="TopBar/DiamondPanel/HBox"]
layout_mode = 2
text = "0"

[node name="VIPPanel" type="PanelContainer" parent="TopBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="TopBar/VIPPanel"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="VIPIcon" type="Label" parent="TopBar/VIPPanel/HBox"]
layout_mode = 2
text = "üëë"

[node name="VIPLabel" type="Label" parent="TopBar/VIPPanel/HBox"]
layout_mode = 2
text = "VIP 0"

[node name="FlowIndicator" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 80.0
offset_right = -10.0
offset_bottom = 140.0
grow_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="FlowIndicator"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HBox" type="HBoxContainer" parent="FlowIndicator/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="FlowIcon" type="Label" parent="FlowIndicator/VBox/HBox"]
layout_mode = 2
text = "üî•"

[node name="FlowLabel" type="Label" parent="FlowIndicator/VBox/HBox"]
layout_mode = 2
text = "ÂøÉÊµÅÁä∂ÊÄÅ 00:00"

[node name="FlowBonus" type="Label" parent="FlowIndicator/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
text = "+50% ËÉΩÈáèÂä†Êàê"
horizontal_alignment = 1

[node name="NotificationArea" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 150.0
offset_right = -10.0
offset_bottom = 350.0
grow_horizontal = 0
theme_override_constants/separation = 8

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -70.0
offset_right = 320.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 1

[node name="QuestButton" type="Button" parent="BottomBar"]
layout_mode = 2
custom_minimum_size = Vector2(70, 50)
text = "‰ªªÂä°"

[node name="AchievementButton" type="Button" parent="BottomBar"]
layout_mode = 2
custom_minimum_size = Vector2(70, 50)
text = "ÊàêÂ∞±"

[node name="GuildButton" type="Button" parent="BottomBar"]
layout_mode = 2
custom_minimum_size = Vector2(70, 50)
text = "ÂÖ¨‰ºö"

[node name="PVPButton" type="Button" parent="BottomBar"]
layout_mode = 2
custom_minimum_size = Vector2(70, 50)
text = "Á´ûÊäÄ"

[node name="DecorationButton" type="Button" parent="BottomBar"]
layout_mode = 2
custom_minimum_size = Vector2(70, 50)
text = "Ë£ÖÈ•∞"

[node name="SeasonButton" type="Button" parent="BottomBar"]
layout_mode = 2
custom_minimum_size = Vector2(70, 50)
text = "ËµõÂ≠£"

[node name="SettingsButton" type="Button" parent="BottomBar"]
layout_mode = 2
custom_minimum_size = Vector2(70, 50)
text = "ËÆæÁΩÆ"
