extends Control
## HUD è„šæœ¬
## æ˜¾ç¤ºç©å®¶çŠ¶æ€ä¿¡æ¯

## é¡¶éƒ¨æ èŠ‚ç‚¹
@onready var energy_label: Label = $TopBar/EnergyPanel/VBox/HBox/EnergyLabel
@onready var energy_bar: ProgressBar = $TopBar/EnergyPanel/VBox/EnergyBar
@onready var level_label: Label = $TopBar/ExpPanel/VBox/HBox/LevelLabel
@onready var exp_bar: ProgressBar = $TopBar/ExpPanel/VBox/ExpBar
@onready var gold_label: Label = $TopBar/GoldPanel/HBox/GoldLabel
@onready var diamond_label: Label = $TopBar/DiamondPanel/HBox/DiamondLabel
@onready var vip_label: Label = $TopBar/VIPPanel/HBox/VIPLabel

## å¿ƒæµæŒ‡ç¤ºå™¨èŠ‚ç‚¹
@onready var flow_indicator: PanelContainer = $FlowIndicator
@onready var flow_label: Label = $FlowIndicator/VBox/HBox/FlowLabel
@onready var flow_bonus: Label = $FlowIndicator/VBox/FlowBonus

## é€šçŸ¥åŒºåŸŸ
@onready var notification_area: VBoxContainer = $NotificationArea

## åº•éƒ¨æŒ‰é’®
@onready var quest_button: Button = $BottomBar/QuestButton
@onready var achievement_button: Button = $BottomBar/AchievementButton
@onready var guild_button: Button = $BottomBar/GuildButton
@onready var pvp_button: Button = $BottomBar/PVPButton
@onready var decoration_button: Button = $BottomBar/DecorationButton
@onready var season_button: Button = $BottomBar/SeasonButton
@onready var settings_button: Button = $BottomBar/SettingsButton

## å¤´åƒç›¸å…³èŠ‚ç‚¹
var avatar_display: Control = null
var avatar_selector: Control = null

## é¢æ¿å®ä¾‹
var quest_panel: Control = null
var achievement_panel: Control = null
var guild_panel: Control = null
var pvp_panel: Control = null
var decoration_panel: Control = null
var season_panel: Control = null
var settings_panel: Control = null

## èƒ½é‡è·å–åŠ¨ç”»èŠ‚ç‚¹
var energy_popup_container: Control = null
var energy_popup_label: Label = null
var energy_animation_timer: Timer = null
var last_energy_popup_time: float = 0.0
const ENERGY_POPUP_COOLDOWN: float = 1.0  # èƒ½é‡æç¤ºå†·å´æ—¶é—´ï¼ˆç§’ï¼‰

## å¿ƒæµçŠ¶æ€
var flow_time: float = 0.0
var is_in_flow: bool = false
var flow_pulse_tween: Tween = null

## æ•°å€¼åŠ¨ç”»
var _target_energy: int = 0
var _target_exp: float = 0.0
var _target_gold: int = 0
var _target_diamonds: int = 0
var _display_energy: float = 0.0
var _display_exp: float = 0.0
var _display_gold: float = 0.0
var _display_diamonds: float = 0.0
const VALUE_LERP_SPEED: float = 8.0  # æ•°å€¼å˜åŒ–é€Ÿåº¦

## é€šçŸ¥é˜Ÿåˆ—
var _notification_queue: Array[Dictionary] = []
var _active_notifications: Array[Control] = []
const MAX_NOTIFICATIONS: int = 5
const NOTIFICATION_DURATION: float = 3.0


func _ready() -> void:
	_setup_avatar_display()
	_setup_energy_popup()
	_setup_bottom_bar_buttons()
	_connect_signals()
	_init_display_values()
	_update_display()


## è®¾ç½®å¤´åƒæ˜¾ç¤ºç»„ä»¶
func _setup_avatar_display() -> void:
	"""åˆ›å»ºå¤´åƒæ˜¾ç¤ºç»„ä»¶ï¼Œæ”¾ç½®åœ¨TopBarå·¦ä¾§"""
	# åŠ è½½ AvatarDisplay è„šæœ¬
	var AvatarDisplayScript = load("res://scripts/avatar/avatar_display.gd")
	if not AvatarDisplayScript:
		push_warning("[HUD] æ— æ³•åŠ è½½ AvatarDisplay è„šæœ¬")
		return

	# åˆ›å»ºå¤´åƒæ˜¾ç¤ºç»„ä»¶
	avatar_display = AvatarDisplayScript.new()
	avatar_display.name = "AvatarDisplay"
	avatar_display.avatar_size = 1  # AvatarSize.MEDIUM = 48
	avatar_display.border_style = 2  # BorderStyle.RARITY
	avatar_display.clickable = true
	avatar_display.show_level_badge = true

	# è·å– TopBar å¹¶æ’å…¥å¤´åƒ
	var top_bar = get_node_or_null("TopBar")
	if top_bar:
		# åœ¨ TopBar æœ€å‰é¢æ’å…¥å¤´åƒ
		top_bar.add_child(avatar_display)
		top_bar.move_child(avatar_display, 0)

		# è¿æ¥ç‚¹å‡»ä¿¡å·
		if avatar_display.has_signal("avatar_clicked"):
			avatar_display.avatar_clicked.connect(_on_avatar_clicked)
	else:
		push_warning("[HUD] æœªæ‰¾åˆ° TopBar èŠ‚ç‚¹")
		avatar_display.queue_free()
		avatar_display = null


## è®¾ç½®èƒ½é‡è·å–åŠ¨ç”»èŠ‚ç‚¹
func _setup_energy_popup() -> void:
	"""åˆ›å»ºèƒ½é‡è·å–åŠ¨ç”»çš„UIèŠ‚ç‚¹"""
	# åˆ›å»ºå®¹å™¨ï¼Œä½äºå±å¹•ä¸­å¿ƒåä¸Šä½ç½®
	energy_popup_container = Control.new()
	energy_popup_container.set_anchors_and_offsets_preset(Control.PRESET_CENTER_TOP)
	energy_popup_container.position = Vector2(0, -100)  # è·ç¦»é¡¶éƒ¨100åƒç´ 
	energy_popup_container.z_index = 100  # ç¡®ä¿åœ¨æœ€ä¸Šå±‚æ˜¾ç¤º

	# åˆ›å»ºèƒ½é‡æ ‡ç­¾
	energy_popup_label = Label.new()
	energy_popup_label.text = "+0 èƒ½é‡"
	energy_popup_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	energy_popup_label.add_theme_font_size_override("font_size", 24)

	# è®¾ç½®æ ‡ç­¾æ ·å¼
	var stylebox = StyleBoxFlat.new()
	stylebox.bg_color = Color(0.2, 0.8, 0.2, 0.9)  # æ·±ç»¿è‰²èƒŒæ™¯
	stylebox.corner_radius_top_left = 8
	stylebox.corner_radius_top_right = 8
	stylebox.corner_radius_bottom_left = 8
	stylebox.corner_radius_bottom_right = 8
	energy_popup_label.add_theme_stylebox_override("panel", stylebox)

	# åˆå§‹éšè—
	energy_popup_container.visible = false
	energy_popup_container.add_child(energy_popup_label)
	add_child(energy_popup_container)


func _connect_signals() -> void:
	"""è¿æ¥ä¿¡å·"""
	GameManager.energy_changed.connect(_on_energy_changed)
	GameManager.gold_changed.connect(_on_gold_changed)
	GameManager.diamonds_changed.connect(_on_diamonds_changed)
	GameManager.exp_changed.connect(_on_exp_changed)
	GameManager.level_up.connect(_on_level_up)

	# è¿æ¥èƒ½é‡å¥–åŠ±ä¿¡å·ï¼ˆç”¨äºæ˜¾ç¤ºè·å–åŠ¨ç”»ï¼‰
	if GameManager.has_signal("energy_awarded"):
		GameManager.energy_awarded.connect(_on_energy_awarded)

	EventBus.flow_state_entered.connect(_on_flow_entered)
	EventBus.flow_state_exited.connect(_on_flow_exited)

	# æˆå°±è§£é”é€šçŸ¥
	if EventBus.has_signal("achievement_unlocked"):
		EventBus.achievement_unlocked.connect(_on_achievement_unlocked)


## åˆå§‹åŒ–æ˜¾ç¤ºæ•°å€¼
func _init_display_values() -> void:
	"""åˆå§‹åŒ–æ˜¾ç¤ºæ•°å€¼ï¼Œé¿å…åŠ¨ç”»ä»0å¼€å§‹"""
	_target_energy = GameManager.get_energy()
	_display_energy = float(_target_energy)

	_target_exp = GameManager.get_exp_progress()
	_display_exp = _target_exp

	_target_gold = GameManager.get_gold()
	_display_gold = float(_target_gold)

	_target_diamonds = GameManager.get_diamonds()
	_display_diamonds = float(_target_diamonds)


func _process(delta: float) -> void:
	# å¿ƒæµè®¡æ—¶
	if is_in_flow:
		flow_time += delta
		_update_flow_display()

	# å¹³æ»‘æ•°å€¼åŠ¨ç”»
	_update_value_animations(delta)


## æ›´æ–°æ•°å€¼åŠ¨ç”»
func _update_value_animations(delta: float) -> void:
	"""å¹³æ»‘æ›´æ–°æ˜¾ç¤ºæ•°å€¼"""
	var lerp_factor := 1.0 - exp(-VALUE_LERP_SPEED * delta)

	# èƒ½é‡åŠ¨ç”»
	if abs(_display_energy - float(_target_energy)) > 0.5:
		_display_energy = lerpf(_display_energy, float(_target_energy), lerp_factor)
		_update_energy_display_value()

	# ç»éªŒåŠ¨ç”»
	if abs(_display_exp - _target_exp) > 0.001:
		_display_exp = lerpf(_display_exp, _target_exp, lerp_factor)
		_update_exp_display_value()

	# é‡‘å¸åŠ¨ç”»
	if abs(_display_gold - float(_target_gold)) > 0.5:
		_display_gold = lerpf(_display_gold, float(_target_gold), lerp_factor)
		_update_gold_display_value()

	# é’»çŸ³åŠ¨ç”»
	if abs(_display_diamonds - float(_target_diamonds)) > 0.5:
		_display_diamonds = lerpf(_display_diamonds, float(_target_diamonds), lerp_factor)
		_update_diamond_display_value()


func _update_display() -> void:
	"""æ›´æ–°æ‰€æœ‰æ˜¾ç¤º"""
	_update_energy_display()
	_update_exp_display()
	_update_gold_display()
	_update_diamond_display()
	_update_level_display()


func _update_energy_display() -> void:
	"""æ›´æ–°èƒ½é‡æ˜¾ç¤ºï¼ˆè®¾ç½®ç›®æ ‡å€¼ï¼‰"""
	_target_energy = GameManager.get_energy()
	var max_energy := GameManager.get_max_energy()
	if energy_bar:
		energy_bar.max_value = max_energy


func _update_energy_display_value() -> void:
	"""æ›´æ–°èƒ½é‡æ˜¾ç¤ºæ•°å€¼"""
	if energy_label:
		var max_energy := GameManager.get_max_energy()
		energy_label.text = "%d / %d" % [int(_display_energy), max_energy]
	if energy_bar:
		energy_bar.value = _display_energy


func _update_exp_display() -> void:
	"""æ›´æ–°ç»éªŒæ˜¾ç¤ºï¼ˆè®¾ç½®ç›®æ ‡å€¼ï¼‰"""
	_target_exp = GameManager.get_exp_progress()


func _update_exp_display_value() -> void:
	"""æ›´æ–°ç»éªŒæ˜¾ç¤ºæ•°å€¼"""
	if exp_bar:
		exp_bar.value = _display_exp * 100.0


func _update_gold_display() -> void:
	"""æ›´æ–°é‡‘å¸æ˜¾ç¤ºï¼ˆè®¾ç½®ç›®æ ‡å€¼ï¼‰"""
	_target_gold = GameManager.get_gold()


func _update_gold_display_value() -> void:
	"""æ›´æ–°é‡‘å¸æ˜¾ç¤ºæ•°å€¼"""
	if gold_label:
		gold_label.text = _format_number(int(_display_gold))


func _update_diamond_display() -> void:
	"""æ›´æ–°é’»çŸ³æ˜¾ç¤ºï¼ˆè®¾ç½®ç›®æ ‡å€¼ï¼‰"""
	_target_diamonds = GameManager.get_diamonds()


func _update_diamond_display_value() -> void:
	"""æ›´æ–°é’»çŸ³æ˜¾ç¤ºæ•°å€¼"""
	if diamond_label:
		diamond_label.text = _format_number(int(_display_diamonds))


func _update_level_display() -> void:
	"""æ›´æ–°ç­‰çº§æ˜¾ç¤º"""
	if level_label:
		level_label.text = "Lv.%d" % GameManager.get_level()
	if vip_label:
		var vip_level := DataManager.player_data.vip_level if DataManager.player_data else 0
		vip_label.text = "VIP %d" % vip_level


## æ ¼å¼åŒ–æ•°å­—æ˜¾ç¤ºï¼ˆå¤§æ•°å­—ç®€åŒ–ï¼‰
func _format_number(value: int) -> String:
	if value >= 1000000:
		return "%.1fM" % (value / 1000000.0)
	elif value >= 10000:
		return "%.1fK" % (value / 1000.0)
	else:
		return str(value)


func _update_flow_display() -> void:
	"""æ›´æ–°å¿ƒæµçŠ¶æ€æ˜¾ç¤º"""
	if flow_label:
		var minutes := int(flow_time) / 60
		var seconds := int(flow_time) % 60
		flow_label.text = "å¿ƒæµçŠ¶æ€ %02d:%02d" % [minutes, seconds]

	# æ›´æ–°å¿ƒæµåŠ æˆæ˜¾ç¤º
	if flow_bonus:
		var bonus := _calculate_flow_bonus()
		flow_bonus.text = "+%d%% èƒ½é‡åŠ æˆ" % bonus


## è®¡ç®—å¿ƒæµåŠ æˆç™¾åˆ†æ¯”
func _calculate_flow_bonus() -> int:
	# åŸºç¡€åŠ æˆ 50%ï¼Œæ¯åˆ†é’Ÿé¢å¤– +5%ï¼Œæœ€é«˜ 200%
	var base_bonus := 50
	var time_bonus := int(flow_time / 60.0) * 5
	return mini(base_bonus + time_bonus, 200)


func _on_energy_changed(_current: int, _max_energy: int) -> void:
	_update_energy_display()


func _on_gold_changed(_value: int) -> void:
	_update_gold_display()


func _on_diamonds_changed(_value: int) -> void:
	_update_diamond_display()


func _on_exp_changed(_current: int, _needed: int) -> void:
	_update_exp_display()


func _on_level_up(new_level: int) -> void:
	_update_level_display()
	_update_exp_display()
	# æ˜¾ç¤ºå‡çº§é€šçŸ¥
	show_notification("ğŸ‰ å‡çº§ï¼", "æ­å–œè¾¾åˆ° Lv.%d" % new_level, Color(1.0, 0.84, 0.0))


func _on_flow_entered() -> void:
	"""è¿›å…¥å¿ƒæµçŠ¶æ€"""
	is_in_flow = true
	flow_time = 0.0
	if flow_indicator:
		flow_indicator.visible = true
		_start_flow_pulse_animation()
	show_notification("ğŸ”¥ å¿ƒæµçŠ¶æ€", "è¿›å…¥å¿ƒæµï¼Œèƒ½é‡è·å–åŠ æˆï¼", Color(1.0, 0.5, 0.0))


func _on_flow_exited(_duration: float) -> void:
	"""é€€å‡ºå¿ƒæµçŠ¶æ€"""
	is_in_flow = false
	if flow_indicator:
		flow_indicator.visible = false
	_stop_flow_pulse_animation()
	var minutes := int(_duration) / 60
	show_notification("å¿ƒæµç»“æŸ", "æœ¬æ¬¡å¿ƒæµæŒç»­ %d åˆ†é’Ÿ" % minutes, Color(0.6, 0.6, 0.6))


## å¼€å§‹å¿ƒæµè„‰å†²åŠ¨ç”»
func _start_flow_pulse_animation() -> void:
	if flow_pulse_tween:
		flow_pulse_tween.kill()

	flow_pulse_tween = create_tween()
	flow_pulse_tween.set_loops()
	flow_pulse_tween.tween_property(flow_indicator, "modulate", Color(1.2, 1.0, 0.8, 1.0), 0.5)
	flow_pulse_tween.tween_property(flow_indicator, "modulate", Color(1.0, 1.0, 1.0, 1.0), 0.5)


## åœæ­¢å¿ƒæµè„‰å†²åŠ¨ç”»
func _stop_flow_pulse_animation() -> void:
	if flow_pulse_tween:
		flow_pulse_tween.kill()
		flow_pulse_tween = null
	if flow_indicator:
		flow_indicator.modulate = Color(1.0, 1.0, 1.0, 1.0)


## æˆå°±è§£é”å¤„ç†
func _on_achievement_unlocked(achievement_id: String, achievement_name: String) -> void:
	show_notification("ğŸ† æˆå°±è§£é”", achievement_name, Color(1.0, 0.84, 0.0))


## ==================== å¤´åƒç³»ç»Ÿ ====================

## å¤´åƒç‚¹å‡»å¤„ç†
func _on_avatar_clicked() -> void:
	"""æ‰“å¼€å¤´åƒé€‰æ‹©å™¨"""
	_open_avatar_selector()


## æ‰“å¼€å¤´åƒé€‰æ‹©å™¨
func _open_avatar_selector() -> void:
	"""åˆ›å»ºå¹¶æ˜¾ç¤ºå¤´åƒé€‰æ‹©å™¨"""
	if avatar_selector and is_instance_valid(avatar_selector):
		avatar_selector.open()
		return

	# åŠ è½½ AvatarSelector è„šæœ¬
	var AvatarSelectorScript = load("res://scripts/avatar/avatar_selector.gd")
	if not AvatarSelectorScript:
		push_warning("[HUD] æ— æ³•åŠ è½½ AvatarSelector è„šæœ¬")
		return

	# åˆ›å»ºå¤´åƒé€‰æ‹©å™¨
	avatar_selector = AvatarSelectorScript.new()
	avatar_selector.name = "AvatarSelector"

	# è¿æ¥ä¿¡å·
	avatar_selector.avatar_selected.connect(_on_avatar_selected)
	avatar_selector.closed.connect(_on_avatar_selector_closed)

	# æ·»åŠ åˆ°åœºæ™¯æ ‘ï¼ˆä½œä¸º HUD çš„å­èŠ‚ç‚¹ï¼‰
	add_child(avatar_selector)
	avatar_selector.open()


## å¤´åƒé€‰æ‹©å¤„ç†
func _on_avatar_selected(avatar_id: String) -> void:
	"""å¤„ç†å¤´åƒé€‰æ‹©"""
	print("[HUD] å¤´åƒå·²é€‰æ‹©: ", avatar_id)
	# å¤´åƒæ˜¾ç¤ºç»„ä»¶ä¼šè‡ªåŠ¨æ›´æ–°ï¼ˆé€šè¿‡ AvatarManager ä¿¡å·ï¼‰


## å¤´åƒé€‰æ‹©å™¨å…³é—­å¤„ç†
func _on_avatar_selector_closed() -> void:
	"""å¤„ç†å¤´åƒé€‰æ‹©å™¨å…³é—­"""
	# å¯ä»¥é€‰æ‹©é”€æ¯æˆ–ä¿ç•™é€‰æ‹©å™¨å®ä¾‹
	pass


## ==================== èƒ½é‡è·å–åŠ¨ç”» ====================

## èƒ½é‡å¥–åŠ±å¤„ç†
func _on_energy_awarded(amount: int, source: String) -> void:
	"""å¤„ç†èƒ½é‡å¥–åŠ±äº‹ä»¶ï¼Œæ˜¾ç¤ºè·å–åŠ¨ç”»"""
	# åªæ˜¾ç¤ºå¤§é¢èƒ½é‡è·å–ï¼ˆ>=10ï¼‰ï¼Œé¿å…é¢‘ç¹æç¤º
	if amount < 10:
		return

	var current_time := Time.get_unix_time_from_system()
	# æ£€æŸ¥å†·å´æ—¶é—´
	if current_time - last_energy_popup_time < ENERGY_POPUP_COOLDOWN:
		return

	_show_energy_popup(amount)
	last_energy_popup_time = current_time


## æ˜¾ç¤ºèƒ½é‡è·å–å¼¹çª—
func _show_energy_popup(amount: int) -> void:
	"""æ˜¾ç¤ºèƒ½é‡è·å–å¼¹çª—å¹¶æ’­æ”¾åŠ¨ç”»"""
	if not energy_popup_container or not energy_popup_label:
		push_error("[HUD] èƒ½é‡å¼¹çª—èŠ‚ç‚¹æœªåˆå§‹åŒ–")
		return

	# è®¾ç½®æ–‡æœ¬
	energy_popup_label.text = "+%d èƒ½é‡" % amount

	# æ˜¾ç¤ºå¹¶è®¾ç½®åˆå§‹çŠ¶æ€ï¼ˆé€æ˜åº¦ä¸º0ï¼‰
	energy_popup_container.modulate.a = 0.0
	energy_popup_container.position = Vector2(0, -100)  # åˆå§‹ä½ç½®
	energy_popup_container.visible = true

	# åˆ›å»ºåŠ¨ç”»å®šæ—¶å™¨
	if energy_animation_timer:
		energy_animation_timer.queue_free()

	energy_animation_timer = Timer.new()
	energy_animation_timer.wait_time = 0.02  # æ¯20msæ›´æ–°ä¸€æ¬¡
	energy_animation_timer.timeout.connect(_animate_energy_popup)
	energy_animation_timer.autostart = false

	# æ‰‹åŠ¨è§¦å‘ç¬¬ä¸€æ¬¡æ›´æ–°
	_animate_energy_popup()


## èƒ½é‡å¼¹çª—åŠ¨ç”»å¸§æ›´æ–°
var _animation_progress: float = 0.0
var _animation_start_position: Vector2 = Vector2(0, -100)

func _animate_energy_popup() -> void:
	"""åŠ¨ç”»å¸§æ›´æ–°"""
	if not energy_popup_container or not energy_popup_container.visible:
		_clean_animation()
		return

	_animation_progress += 0.02

	# æ·¡å…¥é˜¶æ®µï¼ˆ0.0 - 0.3ç§’ï¼‰
	if _animation_progress <= 0.3:
		var alpha = _animation_progress / 0.3
		energy_popup_container.modulate.a = alpha

	# ä¸Šæµ®é˜¶æ®µï¼ˆ0.3 - 1.0ç§’ï¼‰
	elif _animation_progress <= 1.0:
		var progress = (_animation_progress - 0.3) / 0.7
		# å‘ä¸Šç§»åŠ¨ 50 åƒç´ 
		var target_y := -100 + (50 * progress)
		energy_popup_container.position = Vector2(0, target_y)

		# æ·¡å‡ºé˜¶æ®µ
		var alpha = 1.0 - (progress * 0.5)  # é€æ¸å˜åŠé€æ˜
		energy_popup_container.modulate.a = alpha

	# åŠ¨ç”»å®Œæˆï¼Œéšè—
	else:
		energy_popup_container.visible = false
		_clean_animation()


## æ¸…ç†åŠ¨ç”»
func _clean_animation() -> void:
	"""æ¸…ç†åŠ¨ç”»èµ„æº"""
	if energy_animation_timer:
		energy_animation_timer.queue_free()
		energy_animation_timer = null
	_animation_progress = 0.0


## ==================== åº•éƒ¨æŒ‰é’®æ  ====================

## è®¾ç½®åº•éƒ¨æŒ‰é’®
func _setup_bottom_bar_buttons() -> void:
	"""è¿æ¥åº•éƒ¨æŒ‰é’®ä¿¡å·"""
	if quest_button:
		quest_button.pressed.connect(_on_quest_button_pressed)
	if achievement_button:
		achievement_button.pressed.connect(_on_achievement_button_pressed)
	if guild_button:
		guild_button.pressed.connect(_on_guild_button_pressed)
	if pvp_button:
		pvp_button.pressed.connect(_on_pvp_button_pressed)
	if decoration_button:
		decoration_button.pressed.connect(_on_decoration_button_pressed)
	if season_button:
		season_button.pressed.connect(_on_season_button_pressed)
	if settings_button:
		settings_button.pressed.connect(_on_settings_button_pressed)


## ä»»åŠ¡æŒ‰é’®ç‚¹å‡»
func _on_quest_button_pressed() -> void:
	"""æ‰“å¼€ä»»åŠ¡é¢æ¿"""
	if quest_panel == null or not is_instance_valid(quest_panel):
		var panel_scene := load("res://scenes/ui/quest/quest_panel.tscn")
		if panel_scene:
			quest_panel = panel_scene.instantiate()
			add_child(quest_panel)
		else:
			push_warning("[HUD] æ— æ³•åŠ è½½ä»»åŠ¡é¢æ¿åœºæ™¯")
			return

	if quest_panel.visible:
		quest_panel.hide()
	else:
		_hide_all_panels()
		quest_panel.show()


## è£…é¥°æŒ‰é’®ç‚¹å‡»
func _on_decoration_button_pressed() -> void:
	"""æ‰“å¼€è£…é¥°é¢æ¿"""
	if decoration_panel == null or not is_instance_valid(decoration_panel):
		var panel_scene := load("res://scenes/ui/decoration/decoration_panel.tscn")
		if panel_scene:
			decoration_panel = panel_scene.instantiate()
			add_child(decoration_panel)
		else:
			push_warning("[HUD] æ— æ³•åŠ è½½è£…é¥°é¢æ¿åœºæ™¯")
			return

	if decoration_panel.visible:
		decoration_panel.hide()
	else:
		_hide_all_panels()
		decoration_panel.show()


## èµ›å­£æŒ‰é’®ç‚¹å‡»
func _on_season_button_pressed() -> void:
	"""æ‰“å¼€èµ›å­£é¢æ¿"""
	if season_panel == null or not is_instance_valid(season_panel):
		var panel_scene := load("res://scenes/ui/season/season_panel.tscn")
		if panel_scene:
			season_panel = panel_scene.instantiate()
			add_child(season_panel)
		else:
			push_warning("[HUD] æ— æ³•åŠ è½½èµ›å­£é¢æ¿åœºæ™¯")
			return

	if season_panel.visible:
		season_panel.hide()
	else:
		_hide_all_panels()
		season_panel.show()


## è®¾ç½®æŒ‰é’®ç‚¹å‡»
func _on_settings_button_pressed() -> void:
	"""æ‰“å¼€è®¾ç½®é¢æ¿"""
	if settings_panel == null or not is_instance_valid(settings_panel):
		var panel_scene := load("res://scenes/ui/settings.tscn")
		if panel_scene:
			settings_panel = panel_scene.instantiate()
			add_child(settings_panel)
		else:
			push_warning("[HUD] æ— æ³•åŠ è½½è®¾ç½®é¢æ¿åœºæ™¯")
			return

	if settings_panel.visible:
		settings_panel.hide()
	else:
		_hide_all_panels()
		settings_panel.show()


## éšè—æ‰€æœ‰é¢æ¿
func _hide_all_panels() -> void:
	"""éšè—æ‰€æœ‰æ‰“å¼€çš„é¢æ¿"""
	if quest_panel and is_instance_valid(quest_panel):
		quest_panel.hide()
	if achievement_panel and is_instance_valid(achievement_panel):
		achievement_panel.hide()
	if guild_panel and is_instance_valid(guild_panel):
		guild_panel.hide()
	if pvp_panel and is_instance_valid(pvp_panel):
		pvp_panel.hide()
	if decoration_panel and is_instance_valid(decoration_panel):
		decoration_panel.hide()
	if season_panel and is_instance_valid(season_panel):
		season_panel.hide()
	if settings_panel and is_instance_valid(settings_panel):
		settings_panel.hide()


## ==================== æ–°å¢é¢æ¿æŒ‰é’® ====================

## æˆå°±æŒ‰é’®ç‚¹å‡»
func _on_achievement_button_pressed() -> void:
	"""æ‰“å¼€æˆå°±é¢æ¿"""
	if achievement_panel == null or not is_instance_valid(achievement_panel):
		var panel_scene := load("res://scenes/ui/achievement/achievement_panel.tscn")
		if panel_scene:
			achievement_panel = panel_scene.instantiate()
			add_child(achievement_panel)
		else:
			push_warning("[HUD] æ— æ³•åŠ è½½æˆå°±é¢æ¿åœºæ™¯")
			return

	if achievement_panel.visible:
		achievement_panel.hide()
	else:
		_hide_all_panels()
		achievement_panel.show()


## å…¬ä¼šæŒ‰é’®ç‚¹å‡»
func _on_guild_button_pressed() -> void:
	"""æ‰“å¼€å…¬ä¼šé¢æ¿"""
	if guild_panel == null or not is_instance_valid(guild_panel):
		var panel_scene := load("res://scenes/ui/guild/guild_panel.tscn")
		if panel_scene:
			guild_panel = panel_scene.instantiate()
			add_child(guild_panel)
		else:
			push_warning("[HUD] æ— æ³•åŠ è½½å…¬ä¼šé¢æ¿åœºæ™¯")
			return

	if guild_panel.visible:
		guild_panel.hide()
	else:
		_hide_all_panels()
		guild_panel.show()


## PVP æŒ‰é’®ç‚¹å‡»
func _on_pvp_button_pressed() -> void:
	"""æ‰“å¼€ PVP ç«æŠ€åœºé¢æ¿"""
	if pvp_panel == null or not is_instance_valid(pvp_panel):
		var panel_scene := load("res://scenes/ui/pvp/pvp_panel.tscn")
		if panel_scene:
			pvp_panel = panel_scene.instantiate()
			add_child(pvp_panel)
		else:
			push_warning("[HUD] æ— æ³•åŠ è½½ PVP é¢æ¿åœºæ™¯")
			return

	if pvp_panel.visible:
		pvp_panel.hide()
	else:
		_hide_all_panels()
		pvp_panel.show()


## ==================== é€šçŸ¥ç³»ç»Ÿ ====================

## æ˜¾ç¤ºé€šçŸ¥
func show_notification(title: String, message: String, color: Color = Color.WHITE) -> void:
	"""æ˜¾ç¤ºä¸€æ¡é€šçŸ¥"""
	_notification_queue.append({
		"title": title,
		"message": message,
		"color": color
	})
	_process_notification_queue()


## å¤„ç†é€šçŸ¥é˜Ÿåˆ—
func _process_notification_queue() -> void:
	"""å¤„ç†ç­‰å¾…ä¸­çš„é€šçŸ¥"""
	while _notification_queue.size() > 0 and _active_notifications.size() < MAX_NOTIFICATIONS:
		var notif_data: Dictionary = _notification_queue.pop_front()
		_create_notification(notif_data)


## åˆ›å»ºé€šçŸ¥UI
func _create_notification(data: Dictionary) -> void:
	"""åˆ›å»ºé€šçŸ¥é¢æ¿"""
	if not notification_area:
		return

	var panel := PanelContainer.new()
	panel.custom_minimum_size = Vector2(300, 60)

	var vbox := VBoxContainer.new()
	vbox.add_theme_constant_override("separation", 2)

	var title_label := Label.new()
	title_label.text = data.get("title", "")
	title_label.add_theme_color_override("font_color", data.get("color", Color.WHITE))
	title_label.add_theme_font_size_override("font_size", 16)

	var msg_label := Label.new()
	msg_label.text = data.get("message", "")
	msg_label.add_theme_font_size_override("font_size", 14)
	msg_label.add_theme_color_override("font_color", Color(0.8, 0.8, 0.8))

	vbox.add_child(title_label)
	vbox.add_child(msg_label)
	panel.add_child(vbox)

	# åˆå§‹é€æ˜
	panel.modulate.a = 0.0
	notification_area.add_child(panel)
	_active_notifications.append(panel)

	# æ·¡å…¥åŠ¨ç”»
	var tween := create_tween()
	tween.tween_property(panel, "modulate:a", 1.0, 0.3)
	tween.tween_interval(NOTIFICATION_DURATION)
	tween.tween_property(panel, "modulate:a", 0.0, 0.3)
	tween.tween_callback(_remove_notification.bind(panel))


## ç§»é™¤é€šçŸ¥
func _remove_notification(panel: Control) -> void:
	"""ç§»é™¤é€šçŸ¥é¢æ¿"""
	if panel in _active_notifications:
		_active_notifications.erase(panel)
	if is_instance_valid(panel):
		panel.queue_free()
	_process_notification_queue()
